<resources>
    <string name="app_name">GoogleFormApp</string>
    <string name="hours">Learning Leaders</string>
    <string name="skills">Skill IQ Leaders</string>
    <string name="some_error">errorrrrrrrr</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on Github(link)</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="project_summision">Project Summision</string>
    <string name="google_africa">Google Africa</string>
    <string name="developer_scholarship">Developer Scholarship</string>
    <string name="r_u_sure">Are You Sure ?!</string>
</resources>